deploy/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: grpc-server
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc
